# gdflatbuffers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  version.txt
include/: gdflatbuffers.hpp
src/: gdflatbuffers.cpp
